<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Kraken Exchange</string>
	<string name="title_section1">Market</string>
	<string name="title_section2">Account</string>
	<string name="title_section3">Trading</string>
	<string name="title_section4">Send Feedback</string>
	<string name="title_section5">About Us</string>

	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="action_example">Example action</string>
	<string name="action_settings">Settings</string>
	<string name="wait_please">Wait..</string>

	<string name="about_us_title">About Us</string>
	<string name="about_us_content">Kraken Exchange by bitrocket.it</string>

	<!-- Menu Bar / Currencies Label -->
	<string name="select_currency_pair">pair</string>
	<string name="select_currency">cur</string>
	<string name="currency_pair_btceur">BTC/EUR</string>
	<string name="currency_pair_btcusd">BTC/USD</string>
	<string name="currency_eur">EUR</string>
	<string name="currency_usd">USD</string>

	<!-- Currencies / Assets-->
	<string name="XXBTZEUR">XXBTZEUR</string>
	<string name="XXBTZUSD">XXBTZUSD</string>
	<string name="XBTEUR">XBTEUR</string>
	<string name="XBTUSD">XBTUSD</string>
	<string name="ZEUR">ZEUR</string>
	<string name="ZUSD">ZUSD</string>

	<!-- Network -->
	<string name="generic_server_down">Server unreachable, it may be down</string>
	<string name="no_internet">No Internet connection</string>
	<string name="generic_error">Network Error</string>

	<!-- Feedback -->
	<string name="feedback_activity">Feedback</string>
	<string name="feedback_spinner_prompt">From:</string>
	<string name="feedback_message_placeholder">Write your comments</string>
	<string name="feedback_email_to">support@bitrocket.it</string>
	<string name="feedback_email_subject">Android - Kraken Exchange</string>

	<!-- API -->
	<string name="api_key">API Key</string>
	<string name="api_secret">Secret</string>
	<string name="action_pair_api">API Setup</string>
	<string name="scan_api">Scan</string>

	<string name="api_settings_activity">Setup Kraken API</string>
	<string name="api_activity_menu_item_invalidate">Reset</string>
	<string name="api_settings_message">Log in to your Kraken account, navigate to Settings -> API, and create your own API Key</string>
	<string name="api_settings_message_setted">Kraken Exchange is already paired with your Kraken.com account, click on "Reset" to clear them</string>
	<string name="api_settings_button_scan_api">Scan QR Code</string>
	<string name="api_pairing_success">Pairing done</string>
	<string name="api_pairing_error">Something goes wrong</string>
	<string name="api_unlink_done">Pairing undone!</string>
	<string name="api_activity_save">Save</string>
	<string name="api_activity_qr_scan_ok">API Tokens found</string>
	<string name="api_activity_qr_scan_error">QR Code error</string>

	<!-- Home Fragment -->
	<string name="hello_home_fragment">Hello blank Home fragment</string>
	<string name="picker_currency">Currency</string>
	<string name="picker_currency_digital">Digital Currency</string>

	<!-- Market Fragment -->
	<string name="fragment_markets_orderbook_asksbidstables_heading_price_label">Price</string>
	<string name="fragment_markets_orderbook_asksbidstables_heading_volume_label">Volume</string>

	<!-- Account Fragment -->
	<string name="fragment_account_title">Account Balance</string>
	<string name="fragment_account_totalbalance_label">Balance</string>

	<!-- TradingFragment --> <!-- Order Dialog Fragment -->
	<string name="order_add_successful">Order successful created!</string>
	<string name="order_deletion_dialog_title">Confirm Order Deletion</string>
	<string name="order_deletion_error">An error occurred during Order Deletion</string>
	<string name="orders_table_heading_type">Type</string>
	<string name="orders_table_heading_pair">Pair</string>
	<string name="orders_table_heading_price">Price</string>
	<string name="orders_table_heading_volume">Volume</string>
	<string name="orders_table_heading_vol_exec">Vol exec</string>
	<string name="orders_table_heading_status">Status</string>

	<string name="dialog_order_title">Create Order</string>
	<string name="dialog_order_type">Buy/Sell</string>
	<string name="dialog_order_volume">Volume</string>
	<string name="dialog_error_asset">Currency Error!</string>
	<string name="dialog_order_ordertype">Market/Limit</string>
	<string name="dialog_order_price">Price</string>
	<string name="dialog_error_volume">Missing volume!</string>
	<string name="dialog_error_price">Missing Price!</string>
	<string name="dialog_order_confirmation_title">Confirm Order Creation</string>
	<string name="dialog_order_error_request">Error on Adding Order</string>

	<!-- EULA -->
	<string name="eula_title">Disclaimer and End User License Agreement</string>
	<string name="accept">Accept</string>
	<string name="decline">Decline</string>

	<!-- ERRORS -->
	<string name="error_no_wallet_app">No Bitcoin app found on this device, address copied to your clipboard!</string>

	<string name="bitcoin_address_clipboard">Bitcoin address copied to clipboard</string>
</resources>