<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="400dip">
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:id="@+id/dialog_order_subtitle"
		android:paddingTop="5dip"
		android:paddingBottom="5dip"
		android:paddingLeft="25dip"
		android:textColor="@color/kraken_blue"/>

	<TableLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginLeft="25dip"
		android:layout_marginRight="25dip">

		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:weightSum="1"
			android:gravity="center_vertical">

			<Switch
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/dialog_order_type"
				android:id="@+id/dialog_order_switch_type"
				android:layout_weight="0.5"/>

			<Spinner
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/dialog_order_assets_dropdown"
				android:layout_weight="0.5"/>
		</TableRow>

		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:weightSum="1"
			android:gravity="center_vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/dialog_order_volume"
				android:id="@+id/dialog_order_tv1"
				android:layout_weight="0.5"
				android:textColor="@android:color/black"
				android:textSize="14sp"
				/>

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="numberDecimal"
				android:ems="10"
				android:id="@+id/dialog_order_edittext_volume"
				android:layout_weight="0.5"/>
		</TableRow>

		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:weightSum="1"
			android:gravity="center_vertical"
			android:layout_marginTop="10dip">

			<Switch
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/dialog_order_ordertype"
				android:id="@+id/dialog_order_switch_ordertype"
				/>
		</TableRow>

		<TableRow
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:weightSum="1"
			android:gravity="center_vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/dialog_order_price"
				android:id="@+id/dialog_order_tv2"
				android:layout_weight="0.5"
				android:textColor="@android:color/black"
				android:textSize="14sp"/>

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="numberDecimal"
				android:ems="10"
				android:id="@+id/dialog_order_edittext_price"
				android:layout_weight="0.5"/>
		</TableRow>

		<!--<TableRow
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:weightSum="1"
			android:gravity="center_vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text=""
				android:id="@+id/dialog_order_prevision"
				android:textColor="@android:color/black"
				android:textSize="14sp"/>

		</TableRow>-->

	</TableLayout>
</LinearLayout>